--- a/hohlbaum_black_mouse_dataset/Dockerfile
+++ b/hohlbaum_black_mouse_dataset/Dockerfile
@@ -20,8 +20,7 @@ RUN python resize_images.py BMv1/
 
 # Copy the code over
 COPY ./benchmark benchmark
-COPY ./scripts scripts
 
 # Set the env variable for where the dataset is
-ENV BMv1_DATASET /workspace/BMv1
+ENV DATA_PATH /workspace/BMv1
 CMD python benchmark/train.py
